<resources>
    <string name="app_name">EventsHub</string>

    //Landing Page
    <string name="app_title">EventsHub</string>
    <string name="slogan">catchy phrase</string>
    <string name="text_landingButton">Get started for free ></string>

    //Dashboard
    <string name="dashboard">Dashboard</string>
    <string name="dashboard_greeting">Hello, </string>

    //Events
    <string name="events">Events</string>
    <string name="Upload">Upload</string>
    <string name="addEvent">Add Event</string>
    <string name="event_name">Event Name</string>
    <string name="event_organiser">Event Organiser</string>
    <string name="event_category">Event Category</string>
    <string name="event_participation">Participation</string>
    <string name="event_location">Location</string>
    <string name="event_date">Date: </string>
    <string name="event_startTime">Start time:</string>
    <string name="event_endTime">End Time:</string>
    <string name="filter_byName">By Name</string>
    <string name="filter_byOrganiser">By Organiser</string>
    <string name="filter_byLocation">By Location</string>
    <string name="filter_byType">By Type</string>

    //Create Events Drop Down Menu
    <string-array name="dropdown_event_participation">
        <item>Attendee</item>
        <item>MC</item>
        <item>Organiser/Supervisor</item>
        <item>Researcher</item>
        <item>Sales/Relationship Builder</item>
        <item>Speaker</item>
        <item>Other</item>
    </string-array>

    <string-array name="dropdown_event_category">
        <item>Conference/Speaker Panel</item>
        <item>Seminar</item>
        <item>Practicum</item>
        <item>Guest Lecture</item>
        <item>Relationship Building Activity</item>
        <item>Shared Research Engagement</item>
        <item>Alumni Event</item>
        <item>Other</item>
    </string-array>

    //Events - Filters by Type
    <string name="filter">Filter by</string>
    <string name="conference">Conference</string>
    <string name="competition">Competition</string>
    <string name="practicum">Practicum</string>
    <string name="workshop">Workshop</string>
    <string name="seminar">Seminar</string>

    //Analytics
    <string name="analytics">Analytics</string>

    //Profile
    <string name="profile">Profile</string>
    <string name="profile_header">Profile</string>
    <string name="user">FirstName LastName</string>
    <string name="logout">LOGOUT</string>
    <string name="help">Help/Support</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>