<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addEvents">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="57sp"
        android:layout_marginVertical="28sp"
        android:fontFamily="@font/inder"
        android:text="@string/addEvent"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/leftArrowProfile2"
        android:layout_width="24dp"
        android:layout_height="26dp"
        android:layout_marginHorizontal="21dp"
        android:layout_marginVertical="35dp"
        android:src="@drawable/left_arrow" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="39sp"
        android:layout_marginVertical="104sp"
        android:fontFamily="@font/inder"
        android:text="@string/event_name"
        android:textAlignment="viewStart"
        android:textColor="@color/navy"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="39sp"
        android:layout_marginVertical="176sp"
        android:fontFamily="@font/inder"
        android:text="@string/event_startTime"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="39sp"
        android:layout_marginVertical="380sp"
        android:fontFamily="@font/inder"
        android:text="@string/event_participation"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="39sp"
        android:layout_marginVertical="312sp"
        android:fontFamily="@font/inder"
        android:text="@string/event_organiser"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="39sp"
        android:layout_marginVertical="516sp"
        android:fontFamily="@font/inder"
        android:text="@string/event_location"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="228sp"
        android:layout_marginVertical="176sp"
        android:fontFamily="@font/inder"
        android:text="@string/event_endTime"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="39sp"
        android:layout_marginVertical="244sp"
        android:fontFamily="@font/inder"
        android:text="@string/event_date"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="39sp"
        android:layout_marginVertical="448dp"
        android:fontFamily="@font/inder"
        android:text="@string/event_category"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="159sp"
        android:layout_height="35sp"
        android:layout_marginHorizontal="130sp"
        android:layout_marginVertical="626sp"
        android:backgroundTint="@color/navy"
        android:fontFamily="@font/inder"
        android:insetTop="3dp"
        android:insetBottom="3dp"
        android:text="@string/Upload"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextStartTime"
        android:layout_width="150sp"
        android:layout_height="37sp"
        android:layout_marginHorizontal="39sp"
        android:layout_marginVertical="198sp"
        android:ems="10"
        android:inputType="time" />

    <EditText
        android:id="@+id/editTextEndTime"
        android:layout_width="150sp"
        android:layout_height="37sp"
        android:layout_marginHorizontal="228sp"
        android:layout_marginVertical="198sp"
        android:ems="10"
        android:inputType="time" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="150sp"
        android:layout_height="37sp"
        android:layout_marginHorizontal="39sp"
        android:layout_marginVertical="266sp"
        android:ems="10"
        android:inputType="date" />

    <EditText
        android:id="@+id/addEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="39sp"
        android:layout_marginVertical="126sp"
        android:ems="10"
        android:fontFamily="@font/inder"
        android:inputType="text"
        android:text="@string/event_name" />

    <EditText
        android:id="@+id/editTextEventOrganiser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="39sp"
        android:layout_marginVertical="334sp"
        android:fontFamily="@font/inder"
        android:ems="10"
        android:inputType="text"
        android:text="@string/event_organiser" />

    <EditText
        android:id="@+id/editTextEventCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="39sp"
        android:layout_marginVertical="470sp"
        android:fontFamily="@font/inder"
        android:ems="10"
        android:inputType="text"
        android:text="@string/event_category" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="39sp"
        android:layout_marginVertical="538sp"
        android:fontFamily="@font/inder"
        android:ems="10"
        android:inputType="text"
        android:text="@string/event_location" />

</FrameLayout>