<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:scrollbars="vertical"
    tools:context=".AddNewEvent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="39sp"
        android:layout_marginVertical="20sp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/inder"
        android:text="Event Participation"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEventCategory" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="57sp"
        android:layout_marginVertical="28sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inder"
        android:text="@string/addEvent"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/leftArrowCreateEvent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/leftArrowCreateEvent"
        android:layout_width="24dp"
        android:layout_height="26dp"
        android:layout_marginHorizontal="21dp"
        android:layout_marginVertical="35dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="39sp"
        android:layout_marginVertical="20sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inder"
        android:text="@string/event_name"
        android:textAlignment="viewStart"
        android:textColor="@color/navy"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="39sp"
        android:layout_marginVertical="125sp"
        android:layout_marginStart="36dp"
        android:fontFamily="@font/inder"
        android:text="@string/event_startTime"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="532dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="163dp"
        android:layout_height="21dp"
        android:layout_marginHorizontal="40sp"
        android:layout_marginVertical="40sp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/inder"
        android:text="@string/event_organiser"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="39sp"
        android:layout_marginVertical="20sp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/inder"
        android:text="@string/event_location"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEventOrganiser" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:layout_marginVertical="125sp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/inder"
        android:text="@string/event_endTime"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="532dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:layout_marginVertical="20sp"
        android:fontFamily="@font/inder"
        android:text="@string/event_date"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLocation" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="39sp"
        android:layout_marginVertical="20sp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/inder"
        android:text="@string/event_category"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEventName" />

    <Button
        android:id="@+id/button2"
        android:layout_width="202dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="130sp"
        android:layout_marginVertical="20sp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/navy"
        android:fontFamily="@font/inder"
        android:text="@string/Upload"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextStartTime" />

    <EditText
        android:id="@+id/editTextStartTime"
        android:layout_width="186dp"
        android:layout_height="45dp"
        android:layout_marginHorizontal="40sp"
        android:layout_marginVertical="20sp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="time"
        android:text="Start Time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextEndTime"
        android:layout_width="162dp"
        android:layout_height="45dp"
        android:layout_marginHorizontal="40sp"
        android:layout_marginVertical="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="time"
        android:text="End Time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editTextStartTime"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="256dp"
        android:layout_height="39dp"
        android:layout_marginHorizontal="39sp"
        android:layout_marginVertical="20sp"
        android:ems="10"
        android:inputType="date"
        android:text="Date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        tools:layout_editor_absoluteY="471dp" />

    <EditText
        android:id="@+id/editTextParticipation"
        android:layout_width="333dp"
        android:layout_height="53dp"
        android:layout_marginHorizontal="39sp"
        android:layout_marginVertical="20sp"
        android:ems="10"
        android:inputType="date"
        android:text="Event Participation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="281dp" />

    <EditText
        android:id="@+id/addEventName"
        android:layout_width="338dp"
        android:layout_height="43dp"
        android:layout_marginHorizontal="40sp"
        android:layout_marginVertical="10sp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/inder"
        android:inputType="text"
        android:text="@string/event_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextEventOrganiser"
        android:layout_width="333dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="40sp"
        android:layout_marginVertical="20sp"
        android:ems="10"
        android:fontFamily="@font/inder"
        android:inputType="text"
        android:text="@string/event_organiser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="372dp" />

    <EditText
        android:id="@+id/editTextEventCategory"
        android:layout_width="335dp"
        android:layout_height="42dp"
        android:layout_marginHorizontal="47sp"
        android:layout_marginVertical="10sp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/inder"
        android:inputType="text"
        android:text="@string/event_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/editTextLocation"
        android:layout_width="260dp"
        android:layout_height="42dp"
        android:layout_marginHorizontal="39sp"
        android:layout_marginVertical="20sp"
        android:layout_marginStart="2dp"
        android:ems="10"
        android:fontFamily="@font/inder"
        android:inputType="text"
        android:text="@string/event_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        tools:layout_editor_absoluteY="420dp" />

</androidx.constraintlayout.widget.ConstraintLayout>